<resources>
    <string name="app_name">socialGiftPrpr</string>
    <string name="list_view_title">MY LISTS</string>
    <string name="list_friend_title">LISTS</string>
    <string name="name_list">Name</string>
    <string name="description_list">Description</string>
    <string name="deadline_list">Deadline</string>
    <string name="save_list">SAVE</string>
    <string name="save_list_title">NEW LIST</string>
    <string name="email">Email</string>
    <string name="view_reserved">View reserved</string>
    <string name="edit_profile">Edit profile</string>
    <string name="log_out">Log out</string>
    <string name="total_lists">Total lists</string>
    <string name="total_gifts">Total gifts</string>
    <string name="friends">Friends</string>
    <string name="view_lists">View lists</string>
    <string name="total_lists_friend">Total lists</string>
    <string name="total_gifts_friend">Total gifts</string>
    <string name="friends_friend">Friends</string>
    <string name="name_gift">Name</string>
    <string name="link_gift">Link</string>
    <string name="gift_view_title">MY GIFTS</string>
    <string name="gift_friend_title">GIFTS</string>
    <string name="friend_name">Name</string>
    <string name="spinner_title">Sort by</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list">List</string>
    <string name="share">Share</string>
    <string name="profile">Profile</string>
    <string name="search_bar_text">Search a friend...</string>
    <string name="user_name">Name</string>
    <string name="user_email">name@gmail.com</string>
    <string name="total_friends_number">0</string>
    <string name="total_gifts_number">Num</string>
    <string name="total_lists_number">Num</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="name_new_gift">Name</string>
    <string name="priority_new_gift">Priority</string>
    <string name="link_new_gift">Link</string>
    <string name="save_new_gift">SAVE</string>
    <string name="friend_email">name@gmail.com</string>
    <string name="edit_profile_title">EDIT PROFILE</string>
    <string name="user_surname">Surname</string>
    <string name="user_password">Password</string>
    <string name="confirm">CONFIRM</string>
    <string name="new_list_title">NEW LIST</string>
    <string name="list_name">Name</string>
    <string name="list_description">Description</string>
    <string name="list_deadline">Deadline</string>
    <string name="save">SAVE</string>
    <string name="new_gift_title">NEW GIFT</string>
    <string name="pop_up_description">DESCRIPTION</string>
    <string name="sign_up_image">IMAGE</string>
    <string name="image_link">Image link</string>
</resources>