<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Authentication.SignUp">

    <TextView
        android:id = "@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/new_list_title"
        android:textSize="24sp"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="0dp"
            android:padding="20dp">

            <EditText
                android:id="@+id/list_name"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="90dp"
                android:background="@drawable/edittext"
                android:hint="@string/list_name"
                android:padding="8dp"
                android:textColorHint="@color/lavender"/>

            <EditText
                android:id="@+id/list_description"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittext"
                android:hint="@string/list_description"
                android:padding="8dp"
                android:textColorHint="@color/lavender"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:id="@+id/list_deadline"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="@string/list_deadline"
                android:textColorHint="@color/lavender"
                android:background="@drawable/edittext"/>

            <Button
                android:id="@+id/save_button"
                android:layout_width="139dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/save"
                android:textColorHint="@color/lavender"
                android:textSize="18sp"
                app:cornerRadius="15dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>