<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="111dp"
            android:layout_height="113dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.519"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.085"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/friend_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/profile_image"
            app:layout_constraintHorizontal_bias="0.425"
            app:layout_constraintStart_toStartOf="@+id/profile_image"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/friend_email"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/profile_name"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="@+id/profile_name"
            app:layout_constraintTop_toBottomOf="@+id/profile_name" />

        <LinearLayout
            android:layout_width="358dp"
            android:layout_height="300dp"
            android:background="@drawable/lavender_background"
            android:elevation="3dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/profile_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:layout_marginLeft="130dp"
                    android:layout_marginRight="130dp">

                    <ImageButton
                        android:id="@+id/viewListButton"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/view_lists"
                        android:scaleType="fitCenter"
                        android:src="@drawable/list" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_lists"
                        android:textColor="@android:color/black"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="40dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_lists_friend"
                    android:layout_marginLeft="50dp"/>

                <TextView
                    android:id="@+id/total_lists_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_marginLeft="102dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_gifts_friend"
                    android:layout_marginLeft="50dp"/>

                <TextView
                    android:id="@+id/total_gifts_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_marginLeft="100dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends_friend"
                    android:layout_marginLeft="50dp"/>

                <TextView
                    android:id="@+id/total_friends_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_marginLeft="116dp"/>

            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>